# Hacksor_CLI-Test-Public-API-

./: Cargo.toml  README.md  errors.txt
src/: main.rs
src/ai/: intent_detector.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs  security_commands.rs
src/terminal/: action_executor.rs  auto_documentation.rs  command_monitor.rs  mod.rs  output_analyzer.rs
src/utils/: mod.rs
